--- a/styles.css
+++ b/styles.css
@@ -1,219 +1,285 @@
-body {
-  
+/* Global Layout Set-up */
+* 
+{ 
+  box-sizing: border-box;
 }
+  
+
+
+body {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-family: Comfortaa; 
+  color: #222;
+  background: #f7f5f0;
+}
+
+
+/* Link Styles */
+
+
 a {
   text-decoration: none;
-  color: slategrey;
+  color: #999;
 }
-/*navi bar*/
+a:hover {
+  color: #6633ff;
+}
 
-#nav1 {
-  height: 73px;
+
+
+/* Section Styles */
+
+
+.main-nav {
   width: 100%;
-  background: #000;
-}
-.nav2 {
-  display: inline-block;
-  list-style: none;
-  margin: 15px 0 0 750px;
-
-}
-.nav2 li {
-  float: left;
+  background: black;
+  min-height: 30px;
+  padding: 10px;
+  position: fixed;
   text-align: center;
-  padding: 7px 10px;
-  border-left: 1px solid #fff;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-around;
+  font-weight: 800;
+  list-style-type: none;
+  margin: 0 auto;
+  padding: 0;
+}
+
+
+.nav .name {
+  display: block;
+  margin-right: auto;
+  color: #a56b80;
+  font-size: 25px;
+}
+
+.nav li {
+  padding: 5px 10px 5px 10px;
+ 
+ 
+}
+.nav a {
+  transition: all .5s;
+}
+
+.nav a:hover {
+  color: #a56b80;
+}
+
+
+
+header {
+  text-align: center;
+  background: url('img/sunset.JPG') no-repeat top center ;
+  background-size: cover;
+  overflow: hidden;
+  padding-top: 60px;
+}
+
+
+header {
+  line-height: 1.5;
+}
+
+
+header .profile-image {
+  margin-top: 50px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 3px solid white;
+  transition: all .5s;
+}
+
+
+header .profile-image:hover {
+  transform: scale(1.1) rotate(5deg);
+}
+
+
+.tag {
+  background-color: #efefef;
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  display: table;
+  margin: 10px auto;
   font-family: oswald;
-  font-size: 20px;
-
-}
-.nav2 li a:hover {
-  color: #fff;
-}
-.name {
-  width: 150px;
-  color: white;
-  font-size: 30px;
-  font-family: Comfortaa;
-  display: inline-block;
-  margin: 0 0 0 300px;
-}
-.name:hover {
-  color: slategrey;
 }
 
-/* wrap */
-
-#wrap {
-  background-image: url(img/sunset.JPG);
-  background-size: 1080px;
-  background-repeat: no-repeat;
-  box-sizing: border-box;
-  height: 300px;
-  margin-left: 300px;
-
+.location {
+  background-color: #222;
+  color: yellow;
+  font-family: comfortaa;
 }
 
-.profile-img {
-  width: 100px;
-  height: 100px;
-  border-radius: 100px;
-  margin: 15px 0 0 495px;
-  
-}
-/* headers */
 
-h1 {
+.card {
+  margin: 30px;
+  padding: 20px 40px 40px;
+  max-width: 500px;
+  text-align: left;
   background: #fff;
-  width: 150px;
-  margin-left: 480px;
-  text-align: center;
-  font-family: magra;
-}
-h2 {
-   margin: 0 auto;
-}
-h3 {
-  margin: 0 auto;
-}
-h4 {
-  background: #fff;
-  width: 200px;
-  text-align: center;
-  margin-left: 460px;
+  border-bottom: 4px solid #ccc;
+  border-radius: 6px;
+  transition: all .5s;
+  font-family: Magra;
 }
 
-/* main */
 
-#Main {
-  height: 400px;
-  width: 1080px;
-  background: slategrey;
-  margin-left: 300px;
-  display: inline-block;
+.card:hover {
+  border-color: #fd6a06;
 }
-.pro {
-  height: 40px;
-  width: 1080px;
-  font-size: 24px;
-  font-family: Baloo Thambi;
-  letter-spacing: 2;
-  line-height: 40px;
-  background: #7ca0b4;
-  text-align: center;
-  margin: 0 auto;
-  display: inline-block;
-}
-#sec1 {
-  width: 450px;
-  height: 300px;
-  background: white;
-  padding: 10px 10px 0 10px;
-  display: inline-block;
-  margin: 20px 0 0 40px;
-}
-#sec2 {
-  width: 450px;
-  height: 300px;
-  background: white;
-  padding: 10px 10px 0 10px;
-  margin: 20px 40px 0 0;
-  float: right;
-}
-.head {
-  background: slategrey;
-  text-align: center;
-  font-family: pacifico;
-}
-p {
- font-size: 18px;
- font-family: Magra;
- letter-spacing: 1px; 
- padding: 15px 10px; 
-}
+
 span {
-  color: Green;
-  font-weight: bolder;
+  color: red;
+  font-weight: bold;
 }
-.list {
-  list-style: none;
- 
-}
-.list li {
-  background: slategrey;
-  margin: 5px;
-  text-align: center;
-  width : 60px;
-  padding: 5px 5px;
-  float: left;
- 
-}
-.list li a {
-  color: #000;
-  font-family: Righteous;
-  font-size: 18px;
-}
-.list li:hover {
-  background: #e7662e;
-}
-/* photo content*/
 
-#content {
-  width: 1080px;
-  height: 300px;
-  background: #bdd3ea;
-  margin-left: 300px;
-  display: inline-block;
-}
-.gallery {
-  width: 1080px;
-  height: 40px;
-  background: #2A4D60;
-  display: inline-block;
+ul.skills {
+  padding: 0;
   text-align: center;
-  font-size: 20px;
-  font-family:  Baloo Thambi;
 }
-.pic {
-  width: 250px;
-  height: 200px;
-  margin: 25px 0 0 14px;
-  box-shadow: 0 4px 20px #000;
-}
-/*footer*/
 
-#foot {
-  height: 80px;
+
+
+.skills li {
+  border-radius: 6px;
+  display: inline-block;
+  background: #06a0fd;
+  color: white;
+  padding: 5px 10px;
+  margin: 2px;
+}
+
+
+
+.skills li:nth-child(odd) {
+  background: forestgreen;
+}
+
+
+
+footer {
   width: 100%;
-  background: #000;
+  min-height: 30px;
+  padding: 20px 0 40px 20px;
 }
-.socialpic {
-  margin-left: 300px;
-  height: 50px;
+
+
+
+footer .copyright {
+  top: -8px;
+  font-size: .75em;
 }
-.social {
-  width: 40px;
-  height: 40px;
-  display: inline;
-  margin-top: 20px;
+
+
+
+footer ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
-.social:hover {
-  background: #e7662e;
-}
-.copyrights {
-  color: forestgreen;
-  width: 160px;
+
+
+
+footer ul li {
   display: inline-block;
-  margin-left: 700px;
-  font-size: 18px;
 }
 
 
 
+a.social {
+  display: inline-block;
+  text-indent: -9999px;
+  margin-left: 5px;
+  width: 50px;
+  height: 30px;
+  background-size: 30px 30px;
+  opacity: .4;
+  transition: all .5s;
+}
+
+
+a.twitter {
+  background-image: url(img/twi1.png);
+  background-repeat: no-repeat;
+}
+
+a.linkedin {
+  background-image: url(img/face1.png);
+  background-repeat: no-repeat;
+}
+
+a.github {
+  background-image: url(img/git.png);
+  background-repeat: no-repeat;
+}
+
+a.social:hover {
+  opacity: 1;
+}
+
+.clearfix {
+  clear: both;
+}
 
 
 
+/* Styles for larger screens */
 
 
+@media screen and (min-width: 720px) {
+  
+  
+ /* TWEENER - IE 10 */
+.flex {      
+      display: flex; 
+      max-width: 1200px;
+      -ms-flex-pack: distribute;
+      justify-content: space-around;
+      margin: 0 auto;
+  }
 
+ 
+
+header {
+    min-height: 470px;
+  }
+
+ 
+
+ .nav {
+    max-width: 1200px;
+    padding: 0 30px;
+  }
+
+
+ 
+
+ main {
+    padding-top: 20px;
+  }
+
+ 
+
+ main p {
+    line-height: 1.6em;
+  }
+
+ 
+
+ footer {
+    font-size: 1.3em;
+    max-width: 1200px;
+    margin: 40px auto;
+  }
+
+
+}
 
